# FlowType

./: .gitignore  .npmrc  README.md  build-windows.bat  build-windows.ps1  index.html  package-lock.json  package.json  vite.config.ts
src/: App.test.tsx  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mock/: update-manifest.json
src-tauri/src/: asr.rs  error.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/desktop/: hotkey.rs  mod.rs  tray.rs  tray_i18n.rs  windows.rs
src-tauri/src/llm/: deepseek.rs  mod.rs  prompts.rs
src-tauri/src/llm/formal_skills/: email.md  general.md  greeting.md  mod.rs  professional_reply.md
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/updates/: mod.rs
src-tauri/src/voice/: audio.rs  iflytek.rs  inject.rs  mod.rs  output.rs  rtasr.rs  state.rs
src/app/components/: ConfirmDialog.tsx  DesktopTitlebar.tsx  FormActions.tsx  InfoCard.tsx  PageHeader.tsx  Sidebar.tsx  Toast.tsx
src/app/config/: navigation.ts
src/app/hooks/: useSettingsShell.ts
src/app/pages/: AboutPage.tsx  AdvancedPage.tsx  HistoryPage.tsx  HotkeyPage.tsx  LiveCaptionPage.test.tsx  LiveCaptionPage.tsx  MascotPage.test.tsx  MascotPage.tsx  OutputPage.tsx  PermissionsPage.tsx  StatusPage.tsx  VoicePage.tsx
src/app/styles/: components.css  forms.css  layout.css  live-caption.css  mascot.css
src/lib/: defaults.ts  tauri.ts  windowControls.ts
src/lib/formatters/: errors.ts  updateMessage.ts
src/lib/i18n/: I18nContext.tsx  dictionaries.ts  locale.ts  types.ts
src/styles/: base.css  index.css
