[package]
name = "flowtype"
version = "0.1.0"
description = "FlowType desktop voice input foundation"
authors = ["FlowType"]
edition = "2021"

[lib]
name = "flowtype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
